--- a/css/style.css
+++ b/css/style.css
@@ -73,3 +73,5 @@ h5.message
     text-shadow: 3px 5px 8px rgba(0, 0, 0, 0.8);
     text-align: center;
 }
+
+/*------------------------------This is for hover inputs---------------------------------*/
