--- a/css/style.css
+++ b/css/style.css
@@ -23,14 +23,14 @@
 .btn-arrow-right
 {
     display: inline-block;
-    border-radius: 3px;
+    border-radius: 0;
     background-color: rgb(76, 175, 80);
     border: none;
     color: rgb(255, 255, 255);
     text-align: center;
     font-size: 20px;
     padding: 5px 10px;
-    width: 30%;
+    width: 35%;
     height: 15%;
     transition: all 0.5s;
     cursor: pointer;
